<resources>

    <!-- Language -->
    <string name="app_name">Minimal Expense</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false"></string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="add_expense">Add expense</string>
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="expense_default_name">New expense</string>
    <string name="create_new_expense">Create new expense</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="discard_changes">Discard changes</string>
    <string name="changes_are_not_saved">Changes are not saved</string>
    <string name="discard_new_expense">Discard new expense</string>
    <string name="nothing_will_be_saved">Nothing will be saved</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_x_expenses">Delete %d expenses</string>
    <string name="this_cannot_be_reversed">This cannot be reversed</string>
    <string name="there_are_still_errors">There are still errors</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="this_is_not_a_valid_amount">This is not a valid amount</string>
    <string name="sort">Sort</string>
    <string name="sort_by_creation_date">Sort by date</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_amount">Sort by amount</string>
    <string name="sort_reverse">Sort reversed</string>
    <string name="only_two_decimal_places_are_allowed">Only two decimal places are allowed</string>
    <string name="created_x">Created: %s</string>
    <string name="filter">Filter</string>
    <string name="labels">Labels</string>
    <string name="date">Date</string>
    <string name="union">Union</string>
    <string name="intersection">Intersection</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="enter_date">Enter date</string>
    <string name="this_is_not_a_valid_date">This is not a valid date</string>
    <string name="s_is_not_a_valid_date">%s is not a valid date</string>
    <string name="cancel">Cancel</string>
    <string name="end_date_cant_be_before_start_date">End date can\'t be before start date</string>
    <string name="select_month">Select month</string>
    <string name="select_dates_manually">Select dates manually</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="income_plural">Income</string>
    <string name="type">Type</string>
    <string name="search">Search</string>
    <string name="search_for_expense_or_label">Search for expense or label</string>
    <string name="notes">Notes</string>

    <!-- Content descriptions -->
    <string name="nav_header_content_description">Navigation header</string>
    <string name="add_expense_floating_action_button_content_description" translatable="false">@string/add_expense</string>

    <!-- Preferences -->
    <string name="info">Info</string>
    <string name="author_title">Author</string>
    <string name="author_content" translatable="false">IzzDarki</string>
    <string name="email_title">E-mail</string>
    <string name="email_content" translatable="false">izzdarki.dev@gmail.com</string>
    <string name="mailto_link" translatable="false">mailto:izzdarki.dev@gmail.com?subject=MinimalExpense</string>
    <string name="version_title">Version</string>
    <string name="version_name" translatable="false">1.1.0-alpha.0</string> <!-- TODO version name, keep up to date -->
    <string name="mode_title">Mode</string>
    <string name="mode_summary">Select what the app should focus on</string>
    <string name="mode_key" translatable="false">preference.mode</string>
    <string name="mode_options">Expenses|Budget</string>
    <string name="currency">Currency</string>
    <string name="currency_summary">Enter a currency symbol</string>
    <string name="currency_key" translatable="false">preference.currency</string>
    <string name="currency_default">€</string>
</resources>