<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.bennet.preferenceutility.ChoicePreference
        android:title="@string/mode_title"
        android:summary="@string/mode_summary"
        android:icon="@drawable/ic_mode_24dp"
        android:key="@string/mode_key"
        options="@string/mode_options"/>

    <EditTextPreference
        android:title="@string/currency"
        android:summary="@string/currency_summary"
        android:icon="@drawable/ic_euro_24dp"
        android:key="@string/currency_key"
        android:defaultValue="@string/currency_default"/>

    <PreferenceCategory android:title="@string/info">

        <Preference
            android:title="@string/author_title"
            android:summary="@string/author_content"
            android:icon="@drawable/ic_person_24dp"/>

        <Preference
            android:title="@string/email_title"
            android:summary="@string/email_content"
            android:icon="@drawable/ic_email_24dp">
            <intent android:action="android.intent.action.SENDTO"
                android:data="@string/mailto_link" />
        </Preference>

        <Preference
            android:title="@string/version_title"
            android:summary="@string/version_name"
            android:icon="@drawable/ic_label_24dp"/>

    </PreferenceCategory>

</PreferenceScreen>